@@ -1,0 +1,8 @@
+# This file was generated by Appraisal
+
+source "http://www.rubygems.org"
+
+gem "sqlite3-ruby"
+gem "sequel", "3.24.0"
+
+gemspec :path=>"../"
