@@ -285,22 +285,9 @@ module StateMachine
         # initial state of the machine *before* any attributes are set on the
         # object
         def define_state_initializer
-          # Hooks in to attribute initialization to set the states *prior* to
-          # the attributes being set
           define_helper :instance, <<-end_eval, __FILE__, __LINE__ + 1
-            # Initializes dynamic states
-            def initialize(*)
-              super do |*args|
-                self.class.state_machines.initialize_states(self, :static => false)
-                changed_columns.clear
-                yield(*args) if block_given?
-              end
-            end
-            
-            # Initializes static states
-            def set(*)
-              self.class.state_machines.initialize_states(self, :dynamic => false) if values.empty?
-              super
+            def initialize_set(*)
+              self.class.state_machines.initialize_states(self) { super }
             end
           end_eval
         end
@@ -314,70 +301,24 @@ module StateMachine
           end
         end
         
-        # Adds hooks into validation for automatically firing events.  This is
-        # a bit more complicated than other integrations since Sequel doesn't
-        # provide an easy way to hook around validation calls
+        # Defines validation hooks if the machine's action is to save the model
         def define_action_helpers
           super
-          
-          if action == :save
-            define_helper :instance, <<-end_eval, __FILE__, __LINE__ + 1
-              def valid?(*args)
-                yielded = false
-                result = self.class.state_machines.transitions(self, :save, :after => false).perform do
-                  yielded = true
-                  super
-                end
-                
-                if yielded || result
-                  result
-                else
-                  #{handle_validation_failure}
-                end
-              end
-            end_eval
-          end
+          define_validation_hook if action == :save
         end
         
-        # Uses custom hooks for :save actions in order to preserve failure
-        # behavior within Sequel.  This is a bit more complicated than other
-        # integrations since Sequel doesn't provide an easy way to hook around
-        # save calls.
-        def define_action_hook
-          if action == :save
-            define_helper :instance, <<-end_eval, __FILE__, __LINE__ + 1
-              def #{action_hook}(*)
-                yielded = false
-                result = self.class.state_machines.transitions(self, :save).perform do
-                  yielded = true
-                  super
-                end
-                
-                if yielded || result
-                  result
-                else
-                  #{handle_save_failure}
-                end
-              end
-            end_eval
-          else
-            super
-          end
+        # Adds hooks into validation for automatically firing events
+        def define_validation_hook
+          define_helper :instance, <<-end_eval, __FILE__, __LINE__ + 1
+            def around_validation(*)
+              self.class.state_machines.transitions(self, :save, :after => false).perform { super }
+            end
+          end_eval
         end
         
         # Uses internal save hooks if using the :save action
         def action_hook
-          action == :save ? :_save : super
-        end
-        
-        # Handles whether validation errors should be raised
-        def handle_validation_failure
-          'raise_on_failure?(args.first || {}) ? raise_hook_failure(:validation) : result'
-        end
-        
-        # Handles how save failures are raised
-        def handle_save_failure
-          'raise_hook_failure(:save)'
+          action == :save ? :around_save : super
         end
         
         # Creates a scope for finding records *with* a particular state or
